--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <h2>Необычное открытие ученых</h2>
         <p>В последние годы все больше людей жалуются на головные боли, связанные с длительным использованием смартфонов. Ученые называют это явление <strong>"техно-мигренью"</strong>, связывая ее с напряжением шейных мышц, перенапряжением глаз и постоянным стрессом из-за уведомлений.</p>
-        <img src="https://via.placeholder.com/800x400" alt="Массаж спины">
+        <img src="news.webp" alt="Массаж спины">
         <h2>Решение: массаж спины двоюродному старшему брату</h2>
         <p>Однако группа исследователей из Норвежского института неврологии сделала неожиданное открытие. Они обнаружили, что массаж спины, сделанный двоюродному старшему брату, оказывает удивительный терапевтический эффект на самого пользователя телефона.</p>
         <p>По словам ведущего исследователя Йохана Сигурдсена, гипотеза родилась случайно. Один из участников эксперимента, жалуясь на головную боль, предложил помочь своему двоюродному брату с напряженной спиной. В результате его собственная боль прошла спустя 10 минут массажа.</p>
